--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.4",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "webpack": "^5.94.0",
+    "path-browserify": "^1.0.1"
   }
 }
